@@ -1731,152 +1731,130 @@
     </include>
 
     <include name="Object_PlotOverlay">
-         <control type="group">
-            <!-- <control type="group">
-                <visible>Control.HasFocus(9601)</visible>
-                <include>Animation_FadeIn</include>
-                <control type="image" description="Background">
-                    <width>100%</width>
-                    <height>100%</height>
-                    <texture colordiffuse="Background">common/white.png</texture>
-                    <animation effect="fade" start="100" end="90" condition="true">Conditional</animation>
-                </control>
-            </control> -->
-
-            <control type="scrollbar" id="9601">
-                <top>100</top>
-                <left>-1000</left>
-                <bottom>100</bottom>
-                <onback condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]">300</onback>
-                <onup condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]">300</onup>
-                <ondown condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]">300</ondown>
-                <onright condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]">300</onright>
-                <onleft condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml)]">300</onleft>
-                <onback condition="Control.IsVisible(9000)">9000</onback>
-                <onup condition="Control.IsVisible(9000)">9000</onup>
-                <onleft condition="Control.IsVisible(9000)">9000</onleft>
-                <onright condition="Control.IsVisible(9000)">9000</onright>
-                <ondown condition="Control.IsVisible(9000)">9000</ondown>
-                <onback condition="Control.IsVisible(3000)">3000</onback>
-                <onup condition="Control.IsVisible(3000)">3000</onup>
-                <onleft condition="Control.IsVisible(3000)">3000</onleft>
-                <onright condition="Control.IsVisible(3000)">3000</onright>
-                <ondown condition="Control.IsVisible(3000)">3000</ondown>
-                <onback condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onback>
-                <onup condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onup>
-                <onleft condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onleft>
-                <onright condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onright>
-                <ondown condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</ondown>
-                <showonepage>true</showonepage>
-                <width>8</width>
-                <orientation>vertical</orientation>
-                <animation effect="fade" condition="true" time="0" start="100" end="0">Conditional</animation>
-            </control>
-
+        <param name="visible" default="true" />
+        <definition>
             <control type="group">
-                <left>view_pad</left>
-                <right>view_pad</right>
-                <top>view_top</top>
-                <bottom>view_pad</bottom>
-                <visible>Control.HasFocus(9601)</visible>
-                <include>Animation_FadeIn</include>
+
+                <control type="scrollbar" id="9601">
+                    <visible>$PARAM[visible]</visible>
+                    <top>100</top>
+                    <left>-1000</left>
+                    <bottom>100</bottom>
+                    <onback condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogVideoInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogInfo.xml)]">300</onback>
+                    <onup condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogVideoInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogInfo.xml)]">300</onup>
+                    <ondown condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogVideoInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogInfo.xml)]">300</ondown>
+                    <onright condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogVideoInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogInfo.xml)]">300</onright>
+                    <onleft condition="[Window.IsVisible(DialogVideoInfo.xml) | Window.IsVisible(DialogMusicInfo.xml) | Window.IsVisible(DialogAddonInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogVideoInfo.xml) | Window.IsVisible(script-script.extendedinfo-DialogInfo.xml)]">300</onleft>
+                    <onback condition="Control.IsVisible(9000)">9000</onback>
+                    <onup condition="Control.IsVisible(9000)">9000</onup>
+                    <onleft condition="Control.IsVisible(9000)">9000</onleft>
+                    <onright condition="Control.IsVisible(9000)">9000</onright>
+                    <ondown condition="Control.IsVisible(9000)">9000</ondown>
+                    <onback condition="Control.IsVisible(3000)">3000</onback>
+                    <onup condition="Control.IsVisible(3000)">3000</onup>
+                    <onleft condition="Control.IsVisible(3000)">3000</onleft>
+                    <onright condition="Control.IsVisible(3000)">3000</onright>
+                    <ondown condition="Control.IsVisible(3000)">3000</ondown>
+                    <onback condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onback>
+                    <onup condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onup>
+                    <onleft condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onleft>
+                    <onright condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</onright>
+                    <ondown condition="!Control.IsVisible(3000) + !Control.IsVisible(9000)">50</ondown>
+                    <showonepage>true</showonepage>
+                    <width>8</width>
+                    <orientation>vertical</orientation>
+                    <animation effect="fade" condition="true" time="0" start="100" end="0">Conditional</animation>
+                </control>
+
                 <control type="group">
-                    <top>12</top>
+                    <visible>$PARAM[visible]</visible>
+                    <left>view_pad</left>
+                    <right>view_pad</right>
+                    <top>view_top</top>
+                    <bottom>view_pad</bottom>
+                    <visible>Control.HasFocus(9601)</visible>
+                    <include>Animation_FadeIn</include>
                     <control type="group">
-                        <top>90</top>
-                        <visible>Container(9609).HasPrevious</visible>
-                        <include>Animation_FadeIn</include>
-                        <include>Animation_FadeOut</include>
-                        <control type="image">
-                            <width>16</width>
-                            <height>16</height>
-                            <texture colordiffuse="main_fg_100" flipy="true">common/arrow-small.png</texture>
-                            <centerleft>50%</centerleft>
-                            <top>10</top>
+                        <top>12</top>
+                        <control type="group">
+                            <top>90</top>
+                            <visible>Container(9609).HasPrevious</visible>
+                            <include>Animation_FadeIn</include>
+                            <include>Animation_FadeOut</include>
+                            <control type="image">
+                                <width>16</width>
+                                <height>16</height>
+                                <texture colordiffuse="main_fg_100" flipy="true">common/arrow-small.png</texture>
+                                <centerleft>50%</centerleft>
+                                <top>10</top>
+                            </control>
+                            <control type="image">
+                                <width>16</width>
+                                <height>16</height>
+                                <texture colordiffuse="main_fg_100" flipy="true">common/arrow-small.png</texture>
+                                <centerleft>50%</centerleft>
+                                <top>0</top>
+                            </control>
                         </control>
-                        <control type="image">
-                            <width>16</width>
-                            <height>16</height>
-                            <texture colordiffuse="main_fg_100" flipy="true">common/arrow-small.png</texture>
-                            <centerleft>50%</centerleft>
-                            <top>0</top>
-                        </control>
-                    </control>
 
-                    <control type="group">
-                        <bottom>30</bottom>
-                        <visible>Container(9609).HasNext</visible>
-                        <include>Animation_FadeIn</include>
-                        <include>Animation_FadeOut</include>
-                        <control type="image">
-                            <width>16</width>
-                            <height>16</height>
-                            <texture colordiffuse="main_fg_100" flipy="false">common/arrow-small.png</texture>
-                            <centerleft>50%</centerleft>
-                            <bottom>0</bottom>
+                        <control type="group">
+                            <bottom>30</bottom>
+                            <visible>Container(9609).HasNext</visible>
+                            <include>Animation_FadeIn</include>
+                            <include>Animation_FadeOut</include>
+                            <control type="image">
+                                <width>16</width>
+                                <height>16</height>
+                                <texture colordiffuse="main_fg_100" flipy="false">common/arrow-small.png</texture>
+                                <centerleft>50%</centerleft>
+                                <bottom>0</bottom>
+                            </control>
+                            <control type="image">
+                                <width>16</width>
+                                <height>16</height>
+                                <texture colordiffuse="main_fg_100" flipy="false">common/arrow-small.png</texture>
+                                <centerleft>50%</centerleft>
+                                <bottom>10</bottom>
+                            </control>
                         </control>
-                        <control type="image">
-                            <width>16</width>
-                            <height>16</height>
-                            <texture colordiffuse="main_fg_100" flipy="false">common/arrow-small.png</texture>
-                            <centerleft>50%</centerleft>
-                            <bottom>10</bottom>
+
+                        <control type="label">
+                            <description>header label</description>
+                            <left>0</left>
+                            <right>0</right>
+                            <height>45</height>
+                            <font>font_overlay_title</font>
+                            <textcolor>main_fg_100</textcolor>
+                            <label>$VAR[Label_OverlayTitle]</label>
                         </control>
-                    </control>
 
-                    <control type="label">
-                        <description>header label</description>
-                        <left>0</left>
-                        <right>0</right>
-                        <height>45</height>
-                        <font>font_overlay_title</font>
-                        <textcolor>main_fg_100</textcolor>
-                        <label>$VAR[Label_OverlayTitle]</label>
-                    </control>
-
-                    <control type="textbox" id="9609">
-                        <description>textarea</description>
-                        <left>0</left>
-                        <right>0</right>
-                        <top>120</top>
-                        <bottom>50</bottom>
-                        <align>left</align>
-                        <textcolor>main_fg_70</textcolor>
-                        <font>font_overlay_plotbox</font>
-                        <label>$VAR[Label_OverlayPlot]</label>
-                        <pagecontrol>9601</pagecontrol>
-                        <autoscroll delay="8000" time="4000" repeat="12000">false</autoscroll>
+                        <control type="textbox" id="9609">
+                            <description>textarea</description>
+                            <left>0</left>
+                            <right>0</right>
+                            <top>120</top>
+                            <bottom>50</bottom>
+                            <align>left</align>
+                            <textcolor>main_fg_70</textcolor>
+                            <font>font_overlay_plotbox</font>
+                            <label>$VAR[Label_OverlayPlot]</label>
+                            <pagecontrol>9601</pagecontrol>
+                            <autoscroll delay="8000" time="4000" repeat="12000">false</autoscroll>
+                        </control>
                     </control>
                 </control>
             </control>
-        </control>
 
-        <!-- <control type="group">
-            <visible>Control.HasFocus(9602)</visible>
-            <include>Animation_FadeIn</include>
-            <include>Animation_FadeOut</include>
-            <control type="image">
-                <texture colordiffuse="main_bg_100">common/white.png</texture>
-                <aspectratio>scale</aspectratio>
+            <control type="button" id="9602">
+                <onleft>300</onleft>
+                <onup>300</onup>
+                <ondown>300</ondown>
+                <onright>300</onright>
+                <onclick>SetFocus(300)</onclick>
+                <onback>300</onback>
+                <include>Defs_Hidden_Button</include>
             </control>
-            <control type="multiimage">
-                <timeperimage>10000</timeperimage>
-                <randomize>true</randomize>
-                <fadetime>600</fadetime>
-                <imagepath background="true">$VAR[Global_Background_Image_Var]</imagepath>
-                <aspectratio>scale</aspectratio>
-            </control>
-        </control> -->
-
-        <control type="button" id="9602">
-            <onleft>300</onleft>
-            <onup>300</onup>
-            <ondown>300</ondown>
-            <onright>300</onright>
-            <onclick>SetFocus(300)</onclick>
-            <onback>300</onback>
-            <include>Defs_Hidden_Button</include>
-        </control>
+        </definition>
     </include>
 
 
