@@ -1,3 +1,6 @@
+[B]0.9.13[/B]
+Fixes for plot overlay in extended info actor
+
 [B]0.9.12[/B]
 LEIA - Fix for scrollbars
 LEIA - DialogAddonSettings
